# audiogen-windows

./: .gitignore  CLAUDE.md  JIRA.md  README.md  download_model.py  download_tokenizer.sh  install_requirements.sh  run_export.sh  run_export_dit.sh  spec.md  upload_models.sh
.github/workflows/: audiogen-build-windows.yml  audiogen-inference-test-windows-arm64.yml  audiogen-inference-test-windows.yml
app/: CMakeLists.txt  README-windows.md  README.md  audiogen.cpp
app/msvc_compat/: arm_fp16.h
scripts/: export_dit_autoencoder.py
